Add row to about section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="white banner">
             <p>Desarrolladora de aplicaciones web</p>
         </div>
-        <section id="about">
+        <section id="about" class="row">
             <div class="w70 m0a">
                 <article>
                     <div class="row">
