Add media queries for laptop

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="w70 m0a row white">
             <nav>
                 <ul class="m0">
-                    <li><a href="#body">Sobre mi</a></li>
+                    <li><a href="#body">Sobre mí</a></li>
                     <li><a href="#projects">Proyectos</a></li>
                     <li><a href="#contact">Contacto</a></li>
                 </ul>
@@ -326,8 +326,8 @@
             </div>
         </section>
         <section id="contact" class="row">
-            <div class="inner row m0a">
-                <h2>Contactame</h2>
+            <div class="inner row m0a w40">
+                <h2>Contáctame</h2>
                 <p>¿Tienes alguna idea o proyecto en el que podamos colaborar? No dudes en contactarme, estaré encantada
                     de conversar y explorar nuevas oportunidades</p>
                 <form id="contact-form">
