Update media queries for laptop

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <article>
                     <div class="row">
                         <div class="w60">
-                            <h2>Sobre mi</h2>
+                            <h2>Sobre mí</h2>
                             <p>
                                 <b>Hola, soy Selene! Desarrolladora web recién graduada!</b> <br />
                                 Recientemente he completado el ciclo superior de Desarrollo de Aplicaciones Web, donde
@@ -336,8 +336,8 @@
                         <input id="name" class="js-input" type="text" placeholder="Introduce tu nombre" required>
                     </div>
                     <div class="form-group">
-                        <label for="email">Correo eléctronico</label>
-                        <input id="email" class="js-input" type="email" placeholder="Introduce tu correo eléctronico"
+                        <label for="email">Correo electrónico</label>
+                        <input id="email" class="js-input" type="email" placeholder="Introduce tu correo electrónico"
                             required>
                     </div>
                     <div class="form-group">
